# picard-plugin-add-to-collection

./: .gitattributes  .pre-commit-config.yaml  LICENSE  MANIFEST.toml  __init__.py  manifest.py  options.py  post_save_processor.py  pyproject.toml  ui_add_to_collection_options.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
